Update image paths in salaah.html

--- a/salaah.html
+++ b/salaah.html
@@ -13,14 +13,14 @@
     
 
     <div class="gallery_grid">
-        <img src="img/salaah1.jpg" alt="salaah" class="image">
-        <img src="img/salaah2.jpg" alt="salaah" class="image">
-        <img src="img/salaah3.jpg" alt="salaah" class="image">
-        <img src="img/salaah4.jpg" alt="salaah" class="image">
-        <img src="img/salaah5.jpg" alt="salaah" class="image">
-        <img src="img/salaah6.jpg" alt="salaah" class="image">
-        <img src="img/salaah7.jpg" alt="salaah" class="image">
-        <img src="img/salaah8.jpg" alt="salaah" class="image">
+        <img src="salaah1.jpg" alt="salaah" class="image">
+        <img src="salaah2.jpg" alt="salaah" class="image">
+        <img src="salaah3.jpg" alt="salaah" class="image">
+        <img src="salaah4.jpg" alt="salaah" class="image">
+        <img src="salaah5.jpg" alt="salaah" class="image">
+        <img src="salaah6.jpg" alt="salaah" class="image">
+        <img src="salaah7.jpg" alt="salaah" class="image">
+        <img src="salaah8.jpg" alt="salaah" class="image">
     </div>
 
     <div id="lightbox" class="lightbox-overlay">
